--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <p>Founded by Aditya Hosur</p>
   </header>
   <main>
-    <img src="https://cdn.pixabay.com/photo/2017/08/07/18/45/kids-2608596_1280.jpg" alt="Kids learning together" class="fun-image">
+    <img src="img/kids.jpg" alt="Kids learning together" class="fun-image">
 
     <section class="intro">
       <p>
@@ -127,9 +127,9 @@
     </section>
 
     <div class="image-row">
-      <img src="https://cdn.pixabay.com/photo/2016/03/27/21/16/school-1280964_1280.jpg" alt="Science experiments">
-      <img src="https://cdn.pixabay.com/photo/2016/01/22/20/32/globe-1159527_1280.jpg" alt="Geography fun">
-      <img src="https://cdn.pixabay.com/photo/2016/03/26/13/57/teacher-1280970_1280.jpg" alt="History storytelling">
+      <img src="img/science.jpg" alt="Science experiments">
+      <img src="img/geography.jpg" alt="Geography fun">
+      <img src="img/history.jpg" alt="History storytelling">
     </div>
 
     <section>
@@ -145,15 +145,13 @@
     <section>
       <h2>Schedule</h2>
       <ul>
-        <li><strong>Session 1:</strong> June 17 – June 28 (Mon-Fri, 10 AM – 11 AM)</li>
-        <li><strong>Session 2:</strong> July 8 – July 19 (Mon-Fri, 10 AM – 11 AM)</li>
-        <li>Each session covers different topics – join both for full coverage!</li>
+        <li><strong>Sessions :</strong> July 7 – Aug 7 (Mon-Thu-Fri, 10 AM – 11 AM)</li>
       </ul>
     </section>
 
     <section>
       <h2>Testimonials</h2>
-      <p><em>“My daughter loved learning with Aditya. She looked forward to each class!”</em> – Asha P., Parent</p>
+      <p><em>“My daughter loved learning with Aditya. She looks forward to each session!”</em> – Priti A, Parent</p>
       <p><em>“Aditya makes complex topics simple and fun. Highly recommend!”</em> – Rajiv K., Parent</p>
     </section>
 
