--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <section>
       <h2>Testimonials</h2>
-      <p><em>“My daughter loved learning with Aditya. She looks forward to each session!”</em> – Priti A, Parent</p>
+      <p><em>“Aditya is cool to hang out with. He always has a riddle or fun geography fact to share!”</em> – Priti A, Parent</p>
       <p><em>“We look forward to Aditya's trivias and games. He makes them super fun and educative for kids and grown ups alike”</em> – Vivek S., Parent</p>
     </section>
 
